# spotify-playlist-bot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linting.yml
playlist_bot/: rss_reader.py
